Work on improving server-side

--- a/content/pages/my-subscriptions.html
+++ b/content/pages/my-subscriptions.html
@@ -15,8 +15,8 @@
 <div id="manage-subscriptions" style="display: none;">
     <div class="ftralert ftralert-warning">
         <i class="fa fa-info" style="font-size:24px;"></i>
-        <p>Only vulnerabilities that Bug Alert has rated as 'very high severity' or 'critical severity' will trigger a phone call,
-        and notices of 'high severity' issues <em>will not</em>.<br>
+        <p>Only vulnerabilities that Bug Alert has rated as 'critical severity' will trigger a phone call,
+        and notices of 'high severity' or 'very high severity' issues <em>will not</em>.<br>
         More information about the rating system can be found <a href="https://github.com/sullivanmatt/bugalert#assigning-severity" target="_blank">on our GitHub documentation</a>.</p>
     </div>
     <h4>Your Contact Information</h4>
